package: update version info to 15.1.5 (2025-08-29)

--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.1.5-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Fri, 29 Aug 2025 05:16:30 -0000
+
 groonga (15.1.4-1) unstable; urgency=low
 
   * New upstream release.
