doc news: add missing content for 15.1.5 entry

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -50,6 +50,11 @@ normalize \
 AlmaLinux 10 packages are now available.
 You can install Groonga on AlmaLinux 10 using the standard package installation methods.
 
+#### [{doc}`/install/debian`] Added support for Debian 13
+
+Debian 13 packages are now available.
+You can install Groonga on Debian 13 using the standard package installation methods.
+
 ### Fixes
 
 #### [{doc}`/install/cmake`] Fixed how to build/install
@@ -72,6 +77,12 @@ cmake --install <Build directory path>
 
 This issue meant that when you executed the `truncate` command on a `TABLE_HASH_KEY` table with the `KEY_LARGE` flag,
 the table could no longer hold more than 4 GiB of total key data, because the `KEY_LARGE` flag was removed during the truncation.
+
+#### [{doc}`/reference/executables/grndb`] Fixed a bug that the database checked by `grndb check` command was not enought
+
+Because `grndb check` command did not check the part of database files.
+
+It's no problem with that tables and columns check by `grndb check` command.
 
 ### Thanks
 
