--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -6,6 +6,9 @@
 
 In this release, we supported `KEY_LARGE` flag for `TABLE_PAT_KEY`!
 
+Debian 13 "Trixie" has been released on 9 August 2025.
+Groonga has arleady used with Debian 13! Please try it!
+
 ### Improvements
 
 #### [{doc}`/reference/commands/table_create`] Added support for `KEY_LARGE` flag for `TABLE_PAT_KEY`
@@ -49,11 +52,6 @@ normalize \
 
 AlmaLinux 10 packages are now available.
 You can install Groonga on AlmaLinux 10 using the standard package installation methods.
-
-#### [{doc}`/install/debian`] Added support for Debian 13
-
-Debian 13 packages are now available.
-You can install Groonga on Debian 13 using the standard package installation methods.
 
 ### Fixes
 
