--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -76,7 +76,7 @@ cmake --install <Build directory path>
 This issue meant that when you executed the `truncate` command on a `TABLE_HASH_KEY` table with the `KEY_LARGE` flag,
 the table could no longer hold more than 4 GiB of total key data, because the `KEY_LARGE` flag was removed during the truncation.
 
-#### [{doc}`/reference/executables/grndb`] Fixed a bug that the database checked by `grndb check` command was not enought
+#### [{doc}`/reference/executables/grndb`] Fixed a bug that the database checked by `grndb check` command was not enough
 
 Because `grndb check` command did not check the part of database files.
 
