--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -80,7 +80,8 @@ the table could no longer hold more than 4 GiB of total key data, because the `K
 
 Because `grndb check` command did not check the part of database files.
 
-It's no problem with that tables and columns check by `grndb check` command.
+However, `grndb cehck` returns correctly result of tables and columns check even if this modificationwasn't made.
+`grndb cehck` can check database correctly by this modification.
 
 ### Thanks
 
