Fix wrong English
Co-authored-by: takuya kodama <a.s.takuya1026@gmail.com>

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -7,7 +7,7 @@
 In this release, we supported `KEY_LARGE` flag for `TABLE_PAT_KEY`!
 
 Debian 13 "Trixie" has been released on 9 August 2025.
-Groonga has arleady used with Debian 13! Please try it!
+Groonga is already supported on Debian 13! Please try it!
 
 ### Improvements
 
