--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -78,7 +78,7 @@ the table could no longer hold more than 4 GiB of total key data, because the `K
 
 #### [{doc}`/reference/executables/grndb`] Fixed a bug that the database checked by `grndb check` command was not enough
 
-Because `grndb check` command did not check the part of database files.
+The issue occurred because the `grndb check` command did not check part of the database files.
 
 However, `grndb cehck` returns correctly result of tables and columns check even if this modificationwasn't made.
 `grndb cehck` can check database correctly by this modification.
