--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -80,7 +80,7 @@ the table could no longer hold more than 4 GiB of total key data, because the `K
 
 The issue occurred because the `grndb check` command did not check part of the database files.
 
-However, `grndb cehck` returns correctly result of tables and columns check even if this modificationwasn't made.
+However, even without this modification, grndb check correctly returns the results of table and column checks.
 `grndb cehck` can check database correctly by this modification.
 
 ### Thanks
