doc news: add missing contents for 15.1.5 entry (#2508)
Co-authored-by: Abe Tomoaki <abe@enzou.tokyo>
Co-authored-by: takuya kodama <a.s.takuya1026@gmail.com>

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -6,6 +6,9 @@
 
 In this release, we supported `KEY_LARGE` flag for `TABLE_PAT_KEY`!
 
+Debian 13 "Trixie" has been released on 9 August 2025.
+Groonga is already supported on Debian 13! Please try it!
+
 ### Improvements
 
 #### [{doc}`/reference/commands/table_create`] Added support for `KEY_LARGE` flag for `TABLE_PAT_KEY`
@@ -68,10 +71,17 @@ cmake --build <Build directory path>
 cmake --install <Build directory path>
 ```
 
-#### [{doc}`/reference/commands/table_create`] Fixed a bug where `KEY_LARGE` flag was lost after executing `truncate` command
+#### [{doc}`/reference/commands/truncate`] Fixed a bug where `KEY_LARGE` flag was lost after executing `truncate` command
 
 This issue meant that when you executed the `truncate` command on a `TABLE_HASH_KEY` table with the `KEY_LARGE` flag,
 the table could no longer hold more than 4 GiB of total key data, because the `KEY_LARGE` flag was removed during the truncation.
+
+#### [{doc}`/reference/executables/grndb`] Fixed a bug that the database checked by `grndb check` command was not enough
+
+The issue occurred because the `grndb check` command did not check part of the database files.
+
+However, even without this modification, grndb check correctly returns the results of table and column checks.
+`grndb cehck` can check database correctly by this modification.
 
 ### Thanks
 
