simplify the release summary

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -4,7 +4,7 @@
 
 ## Release 15.1.7 - 2025-09-29
 
-In this release, we supported NormalizerNFKC's `unify_iteration_mark` option to normalize Japanese iteration marks (ゝ/ゞ/ヽ/ヾ; 々/〻 as single-char repeats) and fixed installation failure on AlmaLinux 10.
+In this release, `NormalizerNFKC` can normalize Japanese iteration marks and fixed installation failure on AlmaLinux 10.
 
 ### Improvements
 
