--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -20,8 +20,8 @@ msgstr "お知らせ - 15系"
 msgid "Release 15.1.7 - 2025-09-29"
 msgstr "15.1.7リリース - 2025-09-29"
 
-msgid "In this release, we supported NormalizerNFKC's `unify_iteration_mark` option to normalize Japanese iteration marks (ゝ/ゞ/ヽ/ヾ; 々/〻 as single-char repeats) and fixed installation failure on AlmaLinux 10."
-msgstr "今回のリリースでは、`NormalizerNFKC`の`unify_iteration_mark`オプションをサポートしました。このオプションで日本語の踊り字を正規化できます。また、AlmaLinux 10でインストール失敗（GPG キー）していた問題を修正しました。"
+msgid "In this release, `NormalizerNFKC` can normalize Japanese iteration marks and fixed installation failure on AlmaLinux 10."
+msgstr "今回のリリースでは、`NormalizerNFKC`で日本語の踊り字を正規化できるようになりました。また、AlmaLinux 10でインストール失敗（GPG キー）していた問題を修正しました。"
 
 msgid "Improvements"
 msgstr "改良"
