add explanation to delete outdated key

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -86,6 +86,24 @@ command_list
 Previously, installation could fail with a dnf GPG check error due to an outdated RPM GPG key in groonga-release.
 We’ve removed the old key and now ship only the RSA4096 key, so installs work as expected now.
 
+If you installed an older `groonga-release` before, remove it once and reinstall the latest package so your system drops the old key:
+
+```console
+$ sudo dnf remove -y groonga-release
+$ sudo dnf install -y https://packages.groonga.org/almalinux/10/groonga-release-latest.noarch.rpm
+```
+
+After reinstallation, `groonga-release` contains only the new key:
+
+```
+$ rpm -ql groonga-release
+/etc/pki/rpm-gpg
+/etc/pki/rpm-gpg/RPM-GPG-KEY-34839225
+/etc/yum.repos.d
+/etc/yum.repos.d/groonga-almalinux.repo
+/etc/yum.repos.d/groonga-amazon-linux.repo
+```
+
 (release-15-1-5)=
 
 ## Release 15.1.5 - 2025-08-29
