--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -86,17 +86,16 @@ command_list
 Previously, installation could fail with a dnf GPG check error due to an outdated RPM GPG key in groonga-release.
 We’ve removed the old key and now ship only the RSA4096 key, so installs work as expected now.
 
-If you installed an older `groonga-release` before, remove it once and reinstall the latest package so your system drops the old key:
+If you have already installed an older `groonga-release`, please upgrade it to the latest version to remove the old key:
 
 ```console
-$ sudo dnf remove -y groonga-release
-$ sudo dnf install -y https://packages.groonga.org/almalinux/10/groonga-release-latest.noarch.rpm
+$ sudo dnf upgrade --refresh groonga-release
 ```
 
-After reinstallation, `groonga-release` contains only the new key:
+After upgrading the package, `groonga-release` contains only the new key:
 
 ```
-$ rpm -ql groonga-release
+$ dnf repoquery -l --installed groonga-release
 /etc/pki/rpm-gpg
 /etc/pki/rpm-gpg/RPM-GPG-KEY-34839225
 /etc/yum.repos.d
