add a missing syntax highlighting for code blocks

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -94,7 +94,7 @@ $ sudo dnf upgrade --refresh groonga-release
 
 After upgrading the package, `groonga-release` contains only the new key:
 
-```
+```console
 $ dnf repoquery -l --installed groonga-release
 /etc/pki/rpm-gpg
 /etc/pki/rpm-gpg/RPM-GPG-KEY-34839225
