Add the improved TokenFilterStem to the release note

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -79,6 +79,47 @@ command_list
 ]
 ```
 
+#### [{doc}`/reference/token_filters/token_filter_stem`] Added support for non-ASCII alphabets
+
+[GH-2539](https://github.com/groonga/groonga/issues/2539)
+
+Reported by Tsai, Xing Wei
+
+Previously, the `TokenFilterStem` filter only worked with ASCII characters.
+Now it supports stemming for non-ASCII alphabets such as Arabic.
+
+Here is an example of using `TokenFilterStem` with Arabic text:
+
+```
+table_create Terms TABLE_PAT_KEY ShortText \
+  --default_tokenizer TokenNgram \
+  --normalizer 'NormalizerNFKC("version", "16.0.0")' \
+  --token_filters 'TokenFilterStem("algorithm", "arabic")'
+
+table_tokenize Terms "الكتاب مفيد" --mode ADD
+[
+  [
+    0,
+    0.0,
+    0.0
+  ],
+  [
+    {
+      "value": "كتاب",
+      "position": 0,
+      "force_prefix": false,
+      "force_prefix_search": false
+    },
+    {
+      "value": "مفيد",
+      "position": 1,
+      "force_prefix": false,
+      "force_prefix_search": false
+    }
+  ]
+]
+```
+
 ### Fixes
 
 #### [{doc}`/install/almalinux`] Fixed installation failure on AlmaLinux 10 (GPG key)
@@ -102,6 +143,10 @@ $ dnf repoquery -l --installed groonga-release
 /etc/yum.repos.d/groonga-almalinux.repo
 /etc/yum.repos.d/groonga-amazon-linux.repo
 ```
+
+### Thanks
+
+- Tsai, Xing Wei
 
 (release-15-1-5)=
 
