add concreate examples to the release note

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -8,10 +8,14 @@ In this release, `NormalizerNFKC` can normalize Japanese iteration marks and fix
 
 ### Improvements
 
-#### [{doc}`/reference/executables/grndb`] Improved error handling for large files
+#### [{doc}`/reference/executables/grndb`] Improved error handling for large database files
 
-Previously, `grndb` aborted when it encountered database files that exceeded filesystem stat limits.
-This release makes those errors non-fatal. `grndb` now logs an error for each problematic file but continues processing to completion.
+Previously, `grndb` aborted when it encountered database files that exceeded
+filesystem stat limits (such as files larger than 2GB on Windows 32-bit systems).
+This release makes those errors non-fatal. When `grndb` encounters such files in
+the Groonga database directory (the `db` file and its related `db.*` files), it
+now logs an error for each problematic file but continues processing to
+completion instead of aborting.
 
 #### [{doc}`/reference/normalizers/normalizer_nfkc`] Added support for iteration marks with `unify_iteration_mark` option
 
