--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -62,8 +62,13 @@ Examples:
 
 #### Added new command to list available commands
 
-A new `command_list` command has been added that returns a list of all available Groonga commands.
-This is useful for discovering available functionality and for tools that need to introspect Groonga's capabilities.
+A new `command_list` command has been added that returns a list of all available
+Groonga commands.
+Currently, this command returns only the command ID and name for each command.
+This introspection API could enable automatic generation of client library APIs
+and help implement Groonga MCP (Model Context Protocol) servers.
+In future releases, we plan to expand the output to include command summaries,
+descriptions, and detailed argument information.
 
 ```
 command_list
