--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -94,7 +94,7 @@ command_list
 
 Reported by Tsai, Xing Wei
 
-Previously, the `TokenFilterStem` filter only worked with ASCII characters.
+Previously, the `TokenFilterStem` filter only worked with ASCII alphabets.
 Now it supports stemming for non-ASCII alphabets such as Arabic.
 
 Here is an example of using `TokenFilterStem` with Arabic text:
