clarify the limitations about iteration_mark

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -26,8 +26,8 @@ This option treats iteration marks as repeats of the immediately preceding chara
 - Hiragana Voiced Iteration Mark ゞ (U+309E)
 - Katakana Iteration Mark ヽ (U+30FD)
 - Katakana Voiced Iteration Mark ヾ (U+30FE)
-- Ideographic Iteration Mark 々 (U+3005) - partial: single-character repetition only
-- Vertical Ideographic Iteration Mark 〻 (U+303B) - partial: single-character repetition only
+- Ideographic Iteration Mark 々 (U+3005) - limitation: only repeats the immediately preceding single character
+- Vertical Ideographic Iteration Mark 〻 (U+303B) - limitation: only repeats the immediately preceding single character
 
 Here is an example of using `unify_iteration_mark` option.
 
