--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -50,11 +50,11 @@ msgstr ""
 msgid "Katakana Voiced Iteration Mark ヾ (U+30FE)"
 msgstr ""
 
-msgid "Ideographic Iteration Mark 々 (U+3005) - partial: single-character repetition only"
-msgstr "Ideographic Iteration Mark 々 (U+3005) - 部分対応：直前1文字のみ"
+msgid "Ideographic Iteration Mark 々 (U+3005) - limitation: only repeats the immediately preceding single character"
+msgstr "Ideographic Iteration Mark 々 (U+3005) - 制限：直前の単一文字のみ繰り返し"
 
-msgid "Vertical Ideographic Iteration Mark 〻 (U+303B) - partial: single-character repetition only"
-msgstr "Vertical Ideographic Iteration Mark 〻 (U+303B) - 部分対応：直前1文字のみ"
+msgid "Vertical Ideographic Iteration Mark 〻 (U+303B) - limitation: only repeats the immediately preceding single character"
+msgstr "Vertical Ideographic Iteration Mark 〻 (U+303B) - 制限：直前の単一文字のみ繰り返し"
 
 msgid "Here is an example of using `unify_iteration_mark` option."
 msgstr "`unify_iteration_mark`オプションの使用例"
