--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -11,7 +11,7 @@ In this release, `NormalizerNFKC` can normalize Japanese iteration marks and fix
 #### [{doc}`/reference/executables/grndb`] Improved error handling for large database files
 
 Previously, `grndb` aborted when it encountered database files that exceeded
-filesystem stat limits (such as files larger than 2GB on Windows 32-bit systems).
+filesystem stat limits (such as files larger than 2GB on Windows systems).
 This release makes those errors non-fatal. When `grndb` encounters such files in
 the Groonga database directory (the `db` file and its related `db.*` files), it
 now logs an error for each problematic file but continues processing to
