simplify the explanation about the command_list

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -65,7 +65,7 @@ Examples:
 A new `command_list` command has been added that returns a list of all available
 Groonga commands.
 Currently, this command returns only the command ID and name for each command.
-This introspection API could enable automatic generation of client library APIs
+Using this command could enable automatic generation of client library APIs
 and help implement Groonga MCP (Model Context Protocol) servers.
 In future releases, we plan to expand the output to include command summaries,
 descriptions, and detailed argument information.
