clarify who has to upgrade the groonga-release package

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -152,10 +152,11 @@ Error: GPG check FAILED
 
 ##### Who should upgrade?
 
-We recommend all users who installed groonga-release **before 2025/09/24** to
-upgrade to the latest package as following step, regardless of distribution
-version. If you installed groonga-release on or **after 2025/09/24**, no
-action is required.
+Most users do not need to upgrade.
+Only users who installed groonga-release on AlmaLinux 10 **before 2025/09/24**
+need to upgrade to the latest package using the steps below.
+If you installed groonga-release on AlmaLinux 10 on or **after 2025/09/24**,
+no action is required.
 
 ```console
 $ sudo dnf upgrade --refresh groonga-release
