remove the content of GPG key because we has already explained

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -131,7 +131,7 @@ table_tokenize Terms "الكتاب مفيد" --mode ADD
 
 ### Fixes
 
-#### [{doc}`/install/almalinux`] Fixed installation failure on AlmaLinux 10 (GPG key)
+#### [{doc}`/install/almalinux`] Fixed installation failure on AlmaLinux 10
 
 Previously, installation could fail with a dnf GPG check error due to the
 following outdated RPM GPG key in groonga-release.
