--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -102,7 +102,7 @@ msgid "Who should upgrade?"
 msgstr "どのユーザーがアップグレードすべきですか？"
 
 msgid "Most users do not need to upgrade. Only users who installed groonga-release on AlmaLinux 10 **before 2025/09/24** need to upgrade to the latest package using the steps below. If you installed groonga-release on AlmaLinux 10 on or **after 2025/09/24**, no action is required."
-msgstr "ほとんどのユーザーはアップグレードの必要はありません。アップグレードの必要があるのは、AlmaLInux 10で**2025/09/24以前**にgroonga-releaseをインストールしたユーザーのみです。AlmaLinux 10でも**2025/09/24以降**にgroonga-releaseをインストールした場合は対応は不要です。"
+msgstr "ほとんどのユーザーはアップグレードの必要はありません。アップグレードの必要があるのは、AlmaLinux 10で**2025/09/24以前**にgroonga-releaseをインストールしたユーザーのみです。AlmaLinux 10でも**2025/09/24以降**にgroonga-releaseをインストールした場合は対応は不要です。"
 
 msgid "After upgrading the package, groonga-release contains only the new key:"
 msgstr "アップグレード後に、`groonga-release`に新しいキーのみが含まれていることを次のように確認できます。"
