--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -139,7 +139,7 @@ We’ve removed the old key and now ship only the RSA4096 key, so installs work 
 expected now.
 
 ```console
-$ # dnf install -y --enablerepo=epel --enablerepo=crb groonga
+$ dnf install -y --enablerepo=epel --enablerepo=crb groonga
 ...
 error: Certificate 72A7496B45499429:
   Policy rejects 72A7496B45499429: No binding signature at time 2025-09-24T09:35:25Z
