--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -10,12 +10,12 @@ In this release, `NormalizerNFKC` can normalize Japanese iteration marks and fix
 
 #### [{doc}`/reference/executables/grndb`] Improved error handling for large database files
 
-Previously, `grndb` aborted when it encountered database files that exceeded
-filesystem stat limits (such as files larger than 2GB on Windows systems).
-This release makes those errors non-fatal. When `grndb` encounters such files in
-the Groonga database directory (the `db` file and its related `db.*` files), it
-now logs an error for each problematic file but continues processing to
-completion instead of aborting.
+Previously, `grndb` terminated abnormally when processing database files that
+exceeded the filesystem stat limit (such as files files larger than 2GB on
+Windows).
+In this release, when `grndb` processes such files in the Groonga database
+directory (the db file and related db.\* files), it records an error for each
+problematic file and continues to completion without aborting.
 
 #### [{doc}`/reference/normalizers/normalizer_nfkc`] Added support for iteration marks with `unify_iteration_mark` option
 
