add link to NormalizerNFKC unify_iteration_mark

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -17,7 +17,7 @@ In this release, when `grndb` processes such files in the Groonga database
 directory (the db file and related db.\* files), it records an error for each
 problematic file and continues to completion without aborting.
 
-#### [{doc}`/reference/normalizers/normalizer_nfkc`] Added support for iteration marks with `unify_iteration_mark` option
+#### [{ref}`normalizer-nfkc-unify-iteration-mark`] Added support for iteration marks with `unify_iteration_mark` option
 
 The `unify_iteration_mark` option now supports additional iteration mark characters.
 This option treats iteration marks as repeats of the immediately preceding character as below.
