--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.1.7-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Mon, 29 Sep 2025 12:07:12 -0000
+
 groonga (15.1.5-1) unstable; urgency=low
 
   * New upstream release.
