--- a/doc/locale/ja/LC_MESSAGES/reference/functions/language_model_knn.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/functions/language_model_knn.po
@@ -1,5 +1,18 @@
+# Japanese translations for Groonga package.
+# Copyright (C) 2009-2025 Groonga Project
+# This file is distributed under the same license as the Groonga package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2025.
+#
 msgid ""
-msgstr "エンベディング検索用のインデックスを作成します。"
+msgstr ""
+"Project-Id-Version: Groonga 15.1.8\n"
+"Report-Msgid-Bugs-To: \n"
+"PO-Revision-Date: 2025-10-31 12:15+0900\n"
+"Language-Team: Japanese\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Execution example:"
 msgstr "実行例："
@@ -13,11 +26,11 @@ msgstr "これは実験的な機能です。現時点ではまだ安定しきっ
 msgid "Summary"
 msgstr "概要"
 
-msgid "`language_model_knn` is a function for search using embeddings."
-msgstr "`language_model_knn`はエンべディングを使った検索をするための関数です。"
+msgid "`language_model_knn` is a function for semantic search."
+msgstr "`language_model_knn`はセマンティックサーチ用の関数です。"
 
-msgid "Search uses the k-Nearest Neighbors (KNN) algorithm."
-msgstr "検索はk近傍法（K-Nearest Neighbors）を使います。"
+msgid "Semantic search uses the k-Nearest Neighbors (k-NN) algorithm."
+msgstr "セマンティックサーチはk近傍法（k-Nearest Neighbors）を使います。"
 
 msgid "You must use it with {doc}`../tokenizers/token_language_model_knn`."
 msgstr "{doc}`../tokenizers/token_language_model_knn`と合わせて使う必要があります。"
@@ -64,17 +77,17 @@ msgstr "サンプルデータ："
 msgid "You need to store embedding information for each record. Here is how to create that column."
 msgstr "各レコードごとにエンべディングの情報を保存しておく必要があります。そのカラムの作成は次のとおりです。"
 
-msgid "Create an index for embedding search."
-msgstr "エンベディング検索用のインデックスを作成します。"
+msgid "Create an index for semantic search."
+msgstr "セマンティックサーチ用のインデックスを作成します。"
 
 msgid "Specify {doc}`../tokenizers/token_language_model_knn` as the tokenizer. The tokenizer's arguments are `model` and `code_column`. Specify the model to use for `model`, and specify the column to store the generated embedding information for `code_column`."
 msgstr "トークナイザーには{doc}`../tokenizers/token_language_model_knn`を指定します。トークナイザーの引数は`model`と`code_column`です。`model`には利用するモデルを指定し、`code_column`には生成したエンベディングの情報を保存するカラムを指定します。"
 
-msgid "This enables embedding search. When you `load` data into `Memos.content`, Groonga automatically generates embeddings. Users do not need to generate embeddings."
-msgstr "これでエンベディング検索ができるようになります。`Memos.content`にデータを`load`するとGroongaが自動でエンべディングを生成します。ユーザがエンべディングを生成する必要はありません。"
+msgid "This enables semantic search. When you `load` data into `Memos.content`, Groonga automatically generates embeddings. Users do not need to generate embeddings."
+msgstr "これでセマンティックサーチができるようになります。`Memos.content`にデータを`load`するとGroongaが自動でエンべディングを生成します。ユーザがエンべディングを生成する必要はありません。"
 
-msgid "Here is an example of embedding search:"
-msgstr "エンベディング検索をする例は次のとおりです。"
+msgid "Here is an example of semantic search:"
+msgstr "以下はセマンティックサーチをする例です。"
 
 msgid "`language_model_knn` function can also be used as a sort key. Specify `language_model_knn` for `--sort_keys`. Since you likely need to fetch results in descending order of similarity, you add a `-` prefix to fetch them in descending order."
 msgstr "`language_model_knn` 関数はソートのキーとしても利用できます。`--sort_keys`に`language_model_knn`を指定します。類似度の高い順に結果を取得したいので、先頭に`-`を付けて降順で取得しています。"
