--- a/doc/locale/ja/LC_MESSAGES/reference/functions/language_model_knn.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/functions/language_model_knn.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Groonga 15.1.8\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-10-31 12:15+0900\n"
+"PO-Revision-Date: 2025-10-31 12:18+0900\n"
 "Language-Team: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -110,7 +110,7 @@ msgstr ""
 msgid "Return value"
 msgstr "戻り値"
 
-msgid "This function is worked as a selector. It means that this function can be executable effectively."
+msgid "This function works as a selector. It means that this function executes effectively."
 msgstr "この関数はセレクターとして動きます。つまり、効率的に実行できるということです。"
 
 msgid "See also"
